		Migration: Redirects to Segue 1 now properly include the 'site' action when
		short-form URLs ('/sites/sitename') are used.
		(2008-08-14 - Adam Franco)
		
	* Change: #2040513 
		Security: Actions that involve data modification now require per-user tokens
		in the request to prevent Cross-Site Request Forgeries.
		(2008-08-14 - Adam Franco)
		(reported by Josh Abraham of Rapid7, LLC.)
	



v. 2.0-rc-1 (2008-08-14)
----------------------------------------------------
This first production release candidate of Segue 2 fixes a number of user-interface
difficulties and adds much documentation.

Notable User-Facing Changes:

- Can now search for sites in the Portal by title, description, or placeholder

- More contextual help.

- New 'Blank' template.

- Can now set site-wide roles and theme when creating a site.

- Roles links have been moved to the top of the screen for easier access.

-------------

Upgrades:

As of beta 25, Segue requires PHP to be compiled with XSL
support. On unix systems this can be added by configuring PHP using the --with-xsl
option. See the following for installation instructions: http://www.php.net/manual/en/xsl.installation.php

Upgrades from versions prior to beta 30 require running system updaters located
under Admin Tools --> Segue Updates.

-------------

Segue 2.0.0 uses Harmoni 1.5.0 and Polyphony 1.3.3.
		
		
	* New feature: #2032839 
		Portal: Can now search for sites by title, description, or placeholder.
		(2008-08-11 - Adam Franco)
		
	* New feature: #1820937 
		Can now split sites to different virtual-hosts or paths based on their
		location category. This enables sites given the 'main' location-category to
		appear at a different url from sites given the 'community'
		location-category. 
		(2008-08-07 - Adam Franco)
		
	* New feature: #2030595 
		Site Creation: Added a new 'Blank' template
		(2008-08-11 - Adam Franco)
		
	* New feature: 
		Site Creation: Can now set site-wide roles and choose theme in create-site
		wizard. 