@@ -47,6 +47,8 @@
 		<li>
 <b>Change:</b><a href="http://sourceforge.net/tracker/index.php?func=detail&amp;aid=2040513&amp;group_id=82171&amp;atid=1098812">
         			#2040513</a> Security: Actions that involve data modification now require per-user tokens in the request to prevent Cross-Site Request Forgeries. (<em>2008-08-14 - Adam Franco</em>)<br> (<em>reported by Josh Abraham of Rapid7, LLC.</em>)</li>
+		<li>
+<b>Change:</b> Now welcome message is configurable. (<em>2008-08-14 - Adam Franco</em>)</li>
 	</ul>
 <br><h2>Version 2.0-rc-1</h2>
 <h3>2008-08-14</h3>
